[package]
name = "de-list-celebrity"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"
licence = "MIT"

[dependencies]
egg-mode = "0.12.0"
# hyper = "0.12.13"
# hyper-tls = "0.3.1"
# native-tls = "0.2.2"
futures = "0.1.*"
tokio-core = "0.1.*"
chrono = "0.4.6"
